[package]
name = "cargo-readme-update"
version = "0.0.1"
edition = "2021"
description = "A Cargo subcommand to update the install version in the README.md."
license = "MIT"
repository = "https://github.com/piot/cargo-readme-update"
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
    "command-line-utilities"
]
keywords = ["cargo", "dependencies"]

[dependencies]
cargo_metadata = "0.18.1"
regex = "1.7"
